# webkitium

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_AUDIT.md  BUILD_STATUS.md  README.md  WEBNN_RESEARCH_FINDINGS.md  features.md  features.yaml  run-build.sh
browser/: CMakeLists.txt  SHELL_PLAN.md
browser/app/: CrossPlatformHost.cpp
browser/color/: ColorBridgeC.cc  ColorBridgeC.h  ColorRamp.cpp  ColorRamp.h  OklchColor.cpp  OklchColor.h  Package.swift  README.md  SemanticPalette.cpp  SemanticPalette.h  module.modulemap
browser/color/color/: ColorBridgeC.h  ColorRamp.h  OklchColor.h  SemanticPalette.h
browser/color/include/: module.modulemap
browser/core/: Origin.cpp  Origin.h  Result.h
browser/extensions/: ExtensionBridgeC.cc  ExtensionBridgeC.h  ExtensionManifest.cpp  ExtensionManifest.h  ExtensionRegistry.cpp  ExtensionRegistry.h  ExtensionRuntime.cpp  ExtensionRuntime.h  ManifestLoader.cpp  ManifestLoader.h  Package.swift  README.md  module.modulemap
browser/extensions/core/: Origin.cpp  Origin.h  Result.h
browser/extensions/extensions/: ExtensionBridgeC.h  ExtensionManifest.h  ExtensionRegistry.h  ExtensionRuntime.h  ManifestLoader.h
browser/extensions/include/: module.modulemap
browser/forms/: FormFiller.cpp  FormFiller.h
browser/platform/: PlatformAdapters.h  README.md
browser/platform/android/: AndroidWebAuthnProvider.cpp  AndroidWebAuthnProvider.h  WebAuthnCredentialManagerJson.cpp  WebAuthnCredentialManagerJson.h
browser/platform/linux/: LinuxWebAuthnProvider.cpp  LinuxWebAuthnProvider.h
browser/platform/macos/: MacOSWebAuthnProvider.h  MacOSWebAuthnProvider.mm
browser/platform/windows/: WindowsWebAuthnProvider.cpp  WindowsWebAuthnProvider.h
browser/suggestions/: Package.swift  SuggestionIndex.cpp  SuggestionIndex.h  SuggestionsBridgeC.cc  SuggestionsBridgeC.h
browser/suggestions/include/: module.modulemap
browser/sync/: ChromiumSyncWireAdapter.cpp  ChromiumSyncWireAdapter.h  LoopbackSyncClient.cpp  LoopbackSyncClient.h  LoopbackSyncRpc.cpp  LoopbackSyncRpc.h  LoopbackSyncServer.cpp  LoopbackSyncServer.h  Package.swift  README.md  SyncBridgeC.cc  SyncBridgeC.h  SyncTypes.cpp  SyncTypes.h  WIRE_PROTOCOL.md  module.modulemap
browser/sync/include/: module.modulemap
browser/sync/sync/: ChromiumSyncWireAdapter.h  LoopbackSyncClient.h  LoopbackSyncRpc.h  LoopbackSyncServer.h  SyncBridgeC.h  SyncTypes.h
browser/tabs/: BrowserCommandController.cpp  BrowserCommandController.h  BrowserStateModel.cpp  BrowserStateModel.h  README.md
browser/tests/: AndroidWebAuthnJsonTest.cpp  BridgeTest.cpp  BrowserCoreSmoke.cpp  ChromiumSyncWireAdapterTest.cpp  ColorTest.cpp  FormFillerTest.cpp  LinuxWebAuthnCapabilitiesTest.cpp  LoopbackSyncTest.cpp  ManifestLoaderTest.cpp  WindowsWebAuthnCapabilitiesTest.cpp
browser/url/: Package.swift  UrlBridgeC.cc  UrlBridgeC.h  UrlNormalize.cpp  UrlNormalize.h
browser/url/include/: module.modulemap
browser/webauthn/: Package.swift  README.md  WebAuthnBridgeC.cc  WebAuthnBridgeC.h  WebAuthnController.cpp  WebAuthnController.h  module.modulemap
browser/webauthn/include/: module.modulemap
browser/webauthn/webauthn/: WebAuthnBridgeC.h  WebAuthnController.h
browser/webnn/: BackendSelector.cpp  BackendSelector.h  InferenceSession.cpp  InferenceSession.h  ModelDownloader.cpp  ModelDownloader.h  ModelStorage.cpp  ModelStorage.h  README.md  WebNnController.cpp  WebNnController.h  WebNnTypes.h
changes/windows-webgpu-service/harness/: CMakeLists.txt  README.md  STATUS.md  vcpkg.json
changes/windows-webgpu-service/harness/docs/: INTEGRATION.md  PROCESS_ARCHITECTURE.md  RUNNER_HOOK.md
changes/windows-webgpu-service/harness/include/webgpu_host/: Host.h  Probes.h
changes/windows-webgpu-service/harness/scripts/: run.ps1
changes/windows-webgpu-service/harness/src/: dawn_bootstrap.cpp  main.cpp  probe.cpp  probe_adapter_info.cpp  probe_buffer_readback.cpp  probe_compute_smoke.cpp  probe_error_callback.cpp  probe_render_offscreen.cpp  probe_suite.cpp  probe_surface_roundtrip.cpp  scene_bouncing_ball.cpp  scene_triangle.cpp  surface.cpp
changes/windows-webgpu-service/harness/tools/: browser-probe-server.js  browser-probe-server.py  merge-reports.ps1  run-goalposts.ps1  validate-probe.html  verify-patches.sh
chrome/android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cc  webkitium_color_jni.cc  webkitium_extensions_jni.cc  webkitium_sync_jni.cc  (+1 more)
chrome/linux/: Cargo.toml  README.md  build.rs  meson.build
chrome/linux/data/: dev.webkitium.Browser.desktop
chrome/linux/src/: app.rs  main.c  main.rs  profile.rs  window.rs  wk-application.c  wk-application.h  wk-omnibar.c  wk-omnibar.h  wk-services.c  wk-services.h  wk-sidebar.c  wk-sidebar.h  wk-tab-content.c  wk-tab-content.h  wk-window.c  wk-window.h
chrome/linux/src/ffi/: extensions.rs  mod.rs  suggestions.rs  url.rs
chrome/linux/src/ui/: browser_window.rs  dialogs.rs  mod.rs  settings.rs  sidebar.rs  webkit_events.rs
chrome/windows-min/: CMakeLists.txt  README.md  build.cmd  main.cpp
harness_linux/: Cargo.toml  README.md
harness_linux/src/: driver.rs  lib.rs  smokes.rs
harness_linux/tests/: required_smokes.rs  test_add_bookmark.rs  test_back_forward.rs  test_bookmark_toggle.rs  test_cancel_download.rs  test_clear_history.rs  test_close_tab.rs  test_download_to_disk.rs  test_downloads_list.rs  test_extensions_list.rs  test_find_on_page.rs  test_history_view.rs  test_keyboard_shortcuts.rs  test_list_bookmarks.rs  test_load_progress.rs  test_multiple_tabs.rs  test_multiple_windows.rs  test_navigate_back_forward.rs  test_navigate_to_url.rs  test_new_tab.rs  test_page_zoom.rs  test_persist_bookmarks.rs  test_persist_open_tabs.rs  test_private_window.rs  test_record_visit.rs  test_reload_stop.rs  test_search_engine_route.rs  test_search_engine_select.rs  test_select_tab.rs  test_settings_window.rs  test_share_page.rs  test_sidebar_saved_leaves.rs  test_sidebar_tabs_list.rs  test_sidebar_visibility.rs  test_site_permissions.rs  test_tab_strip.rs  test_url_autocomplete.rs  test_url_bar.rs  test_url_normalization.rs  test_url_suggestions.rs
(+545 files in other folders)
